results/classifier/zero-shot/118/none/1888431
vnc: 0.672
ppc: 0.644
risc-v: 0.619
graphic: 0.613
peripherals: 0.597
TCG: 0.595
VMM: 0.571
i386: 0.569
user-level: 0.567
PID: 0.564
register: 0.551
hypervisor: 0.536
assembly: 0.527
arm: 0.507
KVM: 0.501
x86: 0.497
semantic: 0.490
device: 0.485
socket: 0.481
files: 0.469
mistranslation: 0.453
performance: 0.452
virtual: 0.426
debug: 0.414
permissions: 0.414
boot: 0.409
architecture: 0.400
network: 0.374
kernel: 0.335

v5.1.0-rc1 build fails on Mac OS X 10.11.6 

Hi all, 

build of tag v5.1.0-rc1 fails on Mac OS X 10.11.6 (El Capitan) with the following error:

git clone https://git.qemu.org/git/qemu.git
    <output elided, but all OK>
cd qemu
git submodule init
    <output elided, but all OK>
git submodule update --recursive
    <output elided, but all OK>
./configure
    <output elided, but all OK>
make
    <output elided, but all OK up until fail>

  CC      trace/control.o
In file included from trace/control.c:29:
In file included from /Users/rtb/src/qemu/include/monitor/monitor.h:4:
In file included from /Users/rtb/src/qemu/include/block/block.h:4:
In file included from /Users/rtb/src/qemu/include/block/aio.h:23:
/Users/rtb/src/qemu/include/qemu/timer.h:843:9: warning: implicit declaration of function 'clock_gettime' is invalid in C99
      [-Wimplicit-function-declaration]
        clock_gettime(CLOCK_MONOTONIC, &ts);
        ^
/Users/rtb/src/qemu/include/qemu/timer.h:843:23: error: use of undeclared identifier 'CLOCK_MONOTONIC'
        clock_gettime(CLOCK_MONOTONIC, &ts);
                      ^
1 warning and 1 error generated.
make: *** [trace/control.o] Error 1


rtb:qemu rtb$ git log -n1
commit c8004fe6bbfc0d9c2e7b942c418a85efb3ac4b00 (HEAD -> master, tag: v5.1.0-rc1, origin/master, origin/HEAD)
Author: Peter Maydell <email address hidden>
Date:   Tue Jul 21 20:28:59 2020 +0100

    Update version for v5.1.0-rc1 release
    
    Signed-off-by: Peter Maydell <email address hidden>
rtb:qemu rtb$ 


Please find the full output of all the commands (from git clone of the repo, to the make) in the attached file "buildfail.txt".

Thank you!

Best regards, 

Robert Ball



I'm sorry, but the QEMU project only supports the two most recent versions of macOS (see https://www.qemu.org/docs/master/system/build-platforms.html#macos ), i.e. everything that is older than macOS 10.14 is not supported anymore.

OK, thank you for pointing that out.

Question, can you help me identify the most recent release/tag/commit that I could back up to which would support Mac OS X 10.11.6?

Thank you!

Best regards, 

Robert Ball


Hmm, let's see ... the work-arounds for old Mac OS X versions have been removed here:

https://git.qemu.org/?p=qemu.git;a=commitdiff;h=483644c25b932360018

It mentiones that this commit has broken compilation earlier:

https://git.qemu.org/?p=qemu.git;a=commitdiff;h=50290c002c045280f8d

... so the newest version that still might be compilable is v4.0.

Fantastic.   Thank you Thomas, greatly appreciated!

Best regards, 

Robert Ball


